--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h1>This is home!</h1>
+<h1>Bulut Tuncel</h1>
+
+<h2>Full-Stack Developer based in Berlin, Germany</h2>
+
+<h3>Currently developing complete websites using Ruby on Rails</h3>
